--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>test</title>
+		<title>貝卡莫兒美睫空間</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><a href="index.html"><strong>資料、圖片來源皆來自網路，僅用來做為學習用途。</strong></a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon solid fa-info-circle">店家相關資訊</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -32,22 +32,22 @@
 						<article class="thumb">
 							<a href="images/fulls/001.jpg" class="image"><img src="images/thumbs/001.jpg" alt="" /></a>
 							<h2>雷射加工手貂毛</h2>
-							<p>雷射加工手貂毛-經典3D-根數150</p>
+							<p>仿真美睫獨家3D嫁接-200根</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/002.jpg" class="image"><img src="images/thumbs/002.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>經典仿真美睫</h2>
+							<p>250根$1299</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/003.jpg" class="image"><img src="images/thumbs/003.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>浪漫俏麗款</h2>
+							<p>250根$1280</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/004.jpg" class="image"><img src="images/thumbs/004.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/070501.jpg" class="image"><img src="images/thumbs/070501.jpg" alt="" /></a>
+							<h2>獨家設計爆濃款3D</h2>
+							<p>380根$2080.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/005.jpg" class="image"><img src="images/thumbs/005.jpg" alt="" /></a>
@@ -56,38 +56,38 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/006.jpg" class="image"><img src="images/thumbs/006.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>自然濃密</h2>
+							<p>250根$1088</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/007.jpg" class="image"><img src="images/thumbs/007.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/070502.jpg" class="image"><img src="images/thumbs/070502.jpg" alt="" /></a>
+							<h2>驚豔艷麗款</h2>
+							<p>350根$1588</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/008.jpg" class="image"><img src="images/thumbs/008.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>優雅濃密款</h2>
+							<p>150根$1088</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/009.jpg" class="image"><img src="images/thumbs/009.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>清晰自然款</h2>
+							<p>200根1588</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/0010.jpg" class="image"><img src="images/thumbs/0010.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>輕鬆自然款</h2>
+							<p>150根$999</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/0011.jpg" class="image"><img src="images/thumbs/0011.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>仿真美睫韓式6D</h2>
+							<p> 350根$1180</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/0012.jpg" class="image"><img src="images/thumbs/0012.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>紳士修眉</h2>
+							<p>紳士修眉亦包含男士霧眉設計</p>
 						</article>
 					</div>
 
@@ -100,7 +100,7 @@
 									<p>輕鬆舒適的環境，專業建議和純熟的技術只為了讓妳放鬆休息中，達到妳想要的自信美</p>
 										<h3>美睫設計嫁接</h3>
 										<p>依照不同眼型，美睫師搭配不同的毛質、捲度和尺寸去設計出一雙適合妳的綻放美矇。</p>
-										<h3>頂級手工紋繡霧眉</h3>
+										<h3>手工仿真微妝霧眉</h3>
 										<p>一次性的拋棄式材料，健康衛生不擔心。操作前的眉形設計，紋繡師的專業建議並且尊重客人喜好，不怕框框眉，只有好運眉。</p>
 
 																	</section>
@@ -115,13 +115,10 @@
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</section>
-								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
-							</div>
+														</div>
 							<div>
 								<section>
-									<h2>Get in touch</h2>
+									<h2>有任何問題歡迎聯繫我</h2>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
@@ -138,6 +135,8 @@
 											<li><input type="submit" value="Send" class="primary" /></li>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
+										<h1>地址:台中市南屯區大墩路767號2F</h1>
+										<h1>電話:0955XXX123</h1>
 									</form>
 								</section>
 							</div>
